<resources>
    <string name="app_name">Lab#2</string>
    <string name="snack_message">The checkbox is now\n</string>
    <string name="toast_message">Label has been updated.\n</string>
    <string name="android_message">I love android</string>
    <string name="press_message">Press Me</string>
    <string name="check_message">Check this out!</string>
    <string name="switch_message">Switch on/off</string>
    <string name="flag_desc">USA Flag</string>
</resources>