<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Row 1 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_message"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/flag"
            android:contentDescription="@string/flag_desc" />

    </RelativeLayout>

    <!-- Row 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:layout_width="173dp"
            android:layout_height="73dp"
            android:text="@string/switch_message"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <!-- Row 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_message"
            android:id="@+id/press_button" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_message" />
    </LinearLayout>

    <!-- Row 4 -->
    <EditText
        android:id="@+id/edit_text"
        android:layout_width="226dp"
        android:layout_height="67dp"
        android:autofillHints=""
        android:hint="@string/android_message"
        android:inputType="text" />

</LinearLayout>