<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:columnCount="2">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:text="@string/android_message"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2">

            <Switch
                android:layout_width="173dp"
                android:layout_height="73dp"
                android:text="@string/switch_message"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <Button
            android:id="@+id/press_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/press_message" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/check_message" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:autofillHints=""
            android:hint="@string/android_message"
            android:inputType="text" />

    </GridLayout>

    <ImageView
        android:id="@+id/flag_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/flag"
        android:contentDescription="@string/flag_desc" />

</RelativeLayout>