<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_message"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_button"
        android:layout_width="173dp"
        android:layout_height="73dp"
        android:text="@string/switch_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/press_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_message"
        app:layout_constraintEnd_toStartOf="@id/checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_button" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/check_message"
        app:layout_constraintStart_toEndOf="@id/press_button"
        app:layout_constraintTop_toTopOf="@id/press_button" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="178dp"
        android:layout_height="69dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/android_message"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/press_button" />

    <ImageView
        android:id="@+id/flag_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/flag"
        android:contentDescription="@string/flag_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>